# ecoevojobs

./: .gitignore  README.md  analysis.ipynb  pyproject.toml  requirements.txt
data/: Snakefile  all_subject_areas.csv  college_scorecard_carnegie_basic.csv  college_scorecard_data.py  ecoevo-2020-2021.xlsx  ecoevo-2021-2022.xlsx  ecoevo-2022-2023.xlsx  ecoevo-2023-2024.xlsx  ecoevo-2024-2025.xlsx  ecoevo_jobs.csv  ecoevo_jobs_us_tt.csv  institution_name_mapping.json  merged_data.csv  r1_universities.csv  ~$ecoevo-2020-2021.xlsx
